libft/compilation.log
[1msrc/ft_string/ft_chr/ft_putchar_fd.c:17:2: [0m[0;1;31merror: [0m[1mignoring return value of function declared with 'warn_unused_result' attribute [-Werror,-Wunused-result][0m
   17 |         write(fd, &c, 1);[0m
      | [0;1;32m        ^~~~~ ~~~~~~~~~
[0m1 error generated.
